syntax = "proto3";
package ununifi.cdp;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "cdp/cdp.proto";

option go_package = "github.com/UnUniFi/chain/x/cdp/types";

// GenesisState defines the cdp module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated Cdp cdps = 2 [
    (gogoproto.moretags) = "yaml:\"cdps\"",
    (gogoproto.nullable) = false
  ];
  repeated Deposit deposits = 3 [
    (gogoproto.moretags) = "yaml:\"deposits\"",
    (gogoproto.nullable) = false
  ];
  uint64 starting_cdp_id = 4 [(gogoproto.moretags) = "yaml:\"starting_cdp_id\""];
  string gov_denom = 5 [(gogoproto.moretags) = "yaml:\"gov_denom\""];
  repeated GenesisAccumulationTime previous_accumulation_times = 6 [
    (gogoproto.moretags) = "yaml:\"previous_accumulation_times\"",
    (gogoproto.nullable) = false
  ];
  repeated GenesisTotalPrincipal total_principals = 7 [
    (gogoproto.moretags) = "yaml:\"total_principals\"",
    (gogoproto.nullable) = false
  ];
  // this line is used by starport scaffolding # genesis/proto/state
}

message GenesisAccumulationTime {
  string collateral_type = 1 [(gogoproto.moretags) = "yaml:\"collateral_type\""];
  google.protobuf.Timestamp previous_accumulation_time = 2 [
    (gogoproto.moretags) = "yaml:\"previous_accumulation_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  string interest_factor = 3 [
    (gogoproto.moretags) = "yaml:\"interest_factor\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message GenesisTotalPrincipal {
  string collateral_type = 1 [(gogoproto.moretags) = "yaml:\"collateral_type\""];
  string total_principal = 2 [
    (gogoproto.moretags) = "yaml:\"total_principal\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
